--- a/src/css/atom/_label.scss
+++ b/src/css/atom/_label.scss
@@ -68,6 +68,7 @@ label {
     &.-complete {
       span:first-child {
         border: 1px solid color("primary", "lighten-2");
+        color: white;
         &:after {
           opacity: 1;
         }
