--- a/src/css/atom/_tag.scss
+++ b/src/css/atom/_tag.scss
@@ -153,7 +153,7 @@
 	}
 
 	&.-pointing {
-    animation: fade-in 200ms ease;
+    // animation: fade-in 200ms ease;
 		&:before {
 			content: "";
 			color: #FFF;
