--- a/src/css/template/_footer.scss
+++ b/src/css/template/_footer.scss
@@ -1,3 +1,49 @@
+/*
+––––
+
+	title:
+		Footer
+
+	comment:
+		La Footer est une plante qui se mange froide
+
+	markup:
+		<footer id="footer">
+		  <div class="container">
+		    <div class="row">
+		      <div class="three col">
+		        <div id="logo"></div>
+		      </div>
+		      <div class="three col">
+		        <h6>Réseaux sociaux</h6>
+		        <ul>
+		          <li><a href="#">Google +</a></li>
+		          <li><a href="http://twitter.com/peon_actu">Twitter</a></li>
+		          <li><a href="http://facebook.com/gopeon">Facebook</a></li>
+		        </ul>
+		      </div>
+		      <div class="three col">
+		        <h6>Presse</h6>
+		        <ul>
+		          <li><a href="#"></a>Contactez-nous</li>
+		          <li><a href="#"></a></li>
+		        </ul>
+		      </div>
+		      <div class="three col">
+		        <h6>Légal</h6>
+		        <ul>
+		          <li><a href="#">Mentions-légales</a></li>
+		        </ul>
+		      </div>
+		    </div>
+		  </div>
+		</footer>
+
+
+  script:
+
+––––
+*/
 
 #footer {
 	background-color: #26272C;
