--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -15,8 +15,8 @@
 		$line-height: 1.6;
 		$baseline: $text-size * $line-height;
 
-		$punchline-font: "Noto Sans", sans-serif;
-		$title-font: "Noto Sans", Helvetica, Arial, sans-serif;
+		$punchline-font: "Roboto", sans-serif;
+		$title-font: "Roboto", Helvetica, Arial, sans-serif;
 		$nav-font: "Noto Sans", sans-serif;
 		$text-font: "Noto Serif", serif;
 
