--- a/src/css/helper/tool/_include-svg-encode.scss
+++ b/src/css/helper/tool/_include-svg-encode.scss
@@ -1,4 +1,8 @@
 
+
+// another url encoder
+// https://codepen.io/kevinweber/pen/dXWoRw
+
 /// Create a urlEncoded SVG DOM element
 /// @author Mike iLL
 /// @param {String} $bg - SVG PATH, including parameters
