--- a/src/templates/atom.jade
+++ b/src/templates/atom.jade
@@ -14,50 +14,6 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
                 &lt;footer&gt;Isaac Asimov&lt;/footer&gt;
               &lt;/blockquote&gt;
 
-   .bloc#atom-Checkbox    h5 Checkbox    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
-          <div class="checkbox">
-            <input id="checkbox2" type="checkbox"/>
-            <label for="checkbox2">
-              <span>Apples</span>
-            </label>
-          </div>
-          <label>Checked</label>
-          <div class="checkbox">
-            <input id="checkbox3" type="checkbox" checked/>
-            <label for="checkbox3">
-              <span>Lemons</span>
-            </label>
-          </div>
-          <label>Disabled</label>
-          <div class="checkbox">
-          <input id="checkbox1" type="checkbox" disabled="disabled"/>
-            <label for="checkbox1">
-              <span>Tomatoes</span>
-            </label>
-          </div>
-
-          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Checkbox-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Checkbox-code.              &lt;label&gt;Simple&lt;/label&gt;
-              &lt;div class=&quot;checkbox&quot;&gt;
-                &lt;input id=&quot;checkbox2&quot; type=&quot;checkbox&quot;/&gt;
-                &lt;label for=&quot;checkbox2&quot;&gt;
-                  &lt;span&gt;Apples&lt;/span&gt;
-                &lt;/label&gt;
-              &lt;/div&gt;
-              &lt;label&gt;Checked&lt;/label&gt;
-              &lt;div class=&quot;checkbox&quot;&gt;
-                &lt;input id=&quot;checkbox3&quot; type=&quot;checkbox&quot; checked/&gt;
-                &lt;label for=&quot;checkbox3&quot;&gt;
-                  &lt;span&gt;Lemons&lt;/span&gt;
-                &lt;/label&gt;
-              &lt;/div&gt;
-              &lt;label&gt;Disabled&lt;/label&gt;
-              &lt;div class=&quot;checkbox&quot;&gt;
-              &lt;input id=&quot;checkbox1&quot; type=&quot;checkbox&quot; disabled=&quot;disabled&quot;/&gt;
-                &lt;label for=&quot;checkbox1&quot;&gt;
-                  &lt;span&gt;Tomatoes&lt;/span&gt;
-                &lt;/label&gt;
-              &lt;/div&gt;
-
    .bloc#atom-Button    h5 Button    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
           <button class="button -primary touch">
             <span>Bouton</span>
@@ -122,7 +78,51 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
               });
             }, 3000);
 
-  .bloc#atom-Hr    h5 Hr    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
+  .bloc#atom-Checkbox    h5 Checkbox    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
+          <div class="checkbox">
+            <input id="checkbox2" type="checkbox"/>
+            <label for="checkbox2">
+              <span>Apples</span>
+            </label>
+          </div>
+          <label>Checked</label>
+          <div class="checkbox">
+            <input id="checkbox3" type="checkbox" checked/>
+            <label for="checkbox3">
+              <span>Lemons</span>
+            </label>
+          </div>
+          <label>Disabled</label>
+          <div class="checkbox">
+          <input id="checkbox1" type="checkbox" disabled="disabled"/>
+            <label for="checkbox1">
+              <span>Tomatoes</span>
+            </label>
+          </div>
+
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Checkbox-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Checkbox-code.              &lt;label&gt;Simple&lt;/label&gt;
+              &lt;div class=&quot;checkbox&quot;&gt;
+                &lt;input id=&quot;checkbox2&quot; type=&quot;checkbox&quot;/&gt;
+                &lt;label for=&quot;checkbox2&quot;&gt;
+                  &lt;span&gt;Apples&lt;/span&gt;
+                &lt;/label&gt;
+              &lt;/div&gt;
+              &lt;label&gt;Checked&lt;/label&gt;
+              &lt;div class=&quot;checkbox&quot;&gt;
+                &lt;input id=&quot;checkbox3&quot; type=&quot;checkbox&quot; checked/&gt;
+                &lt;label for=&quot;checkbox3&quot;&gt;
+                  &lt;span&gt;Lemons&lt;/span&gt;
+                &lt;/label&gt;
+              &lt;/div&gt;
+              &lt;label&gt;Disabled&lt;/label&gt;
+              &lt;div class=&quot;checkbox&quot;&gt;
+              &lt;input id=&quot;checkbox1&quot; type=&quot;checkbox&quot; disabled=&quot;disabled&quot;/&gt;
+                &lt;label for=&quot;checkbox1&quot;&gt;
+                  &lt;span&gt;Tomatoes&lt;/span&gt;
+                &lt;/label&gt;
+              &lt;/div&gt;
+
+   .bloc#atom-Hr    h5 Hr    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
           <hr/>
           <hr class="-lines" />
           <hr class="-dashed -half -center" />
@@ -149,6 +149,16 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
               &lt;hr class=&quot;-title-right&quot; data-title=&quot;title right&quot; /&gt;
               &lt;div class=&quot;hr&quot;&gt;&lt;span&gt;&lt;i class=&quot;icon -heart&quot;&gt;&lt;/i&gt;&lt;/span&gt;&lt;/div&gt;
               &lt;div class=&quot;hr&quot;&gt;&lt;button class=&quot;button&quot;&gt;&lt;i class=&quot;icon -top-arrow&quot;&gt;&lt;/i&gt;Go to top?&lt;/button&gt;&lt;/div&gt;
+
+   .bloc#atom-Inputs    h5 Inputs    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
+          <input type="text" placeholder="test"/>
+          <label>With -round -large</label>
+          <input class="-round -large" type="text" placeholder="test" required />
+
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Inputs-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Inputs-code.              &lt;label&gt;Simple&lt;/label&gt;
+              &lt;input type=&quot;text&quot; placeholder=&quot;test&quot;/&gt;
+              &lt;label&gt;With -round -large&lt;/label&gt;
+              &lt;input class=&quot;-round -large&quot; type=&quot;text&quot; placeholder=&quot;test&quot; required /&gt;
 
    .bloc#atom-Label    h5 Label    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
           <label>
@@ -178,15 +188,9 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
                 With -step -complete
               &lt;/label&gt;
 
-   .bloc#atom-Inputs    h5 Inputs    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
-          <input type="text" placeholder="test"/>
-          <label>With -round -large</label>
-          <input class="-round -large" type="text" placeholder="test" required />
+   .bloc#atom-Pof    h5 Pof    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <div class="pof"></div>
 
-          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Inputs-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Inputs-code.              &lt;label&gt;Simple&lt;/label&gt;
-              &lt;input type=&quot;text&quot; placeholder=&quot;test&quot;/&gt;
-              &lt;label&gt;With -round -large&lt;/label&gt;
-              &lt;input class=&quot;-round -large&quot; type=&quot;text&quot; placeholder=&quot;test&quot; required /&gt;
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Pof-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Pof-code.              &lt;div class=&quot;pof&quot;&gt;&lt;/div&gt;
 
    .bloc#atom-Progress    h5 Progress    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>With -small</label>
           <div class="progress -small">
@@ -289,7 +293,64 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
                 &lt;label for=&quot;radio3&quot;&gt;Tomatoes&lt;/label&gt;
               &lt;/div&gt;
 
-   .bloc#atom-Tag    h5 Tag    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
+   .bloc#atom-Rating    h5 Rating    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <div class="rating -activable -thumb-up">
+            <div class="level"></div>
+          </div>
+          <div class="rating -activable -thumb-down">
+            <div class="level"></div>
+          </div>
+          <div class="rating -activable -heart">
+            <div class="level touch -visible -active"></div>
+            <div class="level touch -visible -active"></div>
+            <div class="level touch -visible"></div>
+            <div class="level touch -visible"></div>
+            <div class="level touch -visible"></div>
+          </div>
+          <div class="rating -star -warning">
+            <div class="level -active"></div>
+            <div class="level -active"></div>
+            <div class="level -active"></div>
+            <div class="level"></div>
+            <div class="level"></div>
+          </div>
+
+          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Rating-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Rating-code.              &lt;div class=&quot;rating -activable -thumb-up&quot;&gt;
+                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;rating -activable -thumb-down&quot;&gt;
+                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;rating -activable -heart&quot;&gt;
+                &lt;div class=&quot;level touch -visible -active&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level touch -visible -active&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;rating -star -warning&quot;&gt;
+                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
+                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
+              &lt;/div&gt;
+
+           div(hljs).javascript.Rating-code.            $('.rating.-activable .level').hover(function() {
+              $(this).addClass('-to-active');
+              $(this).parent().find('.level:lt(' + $(this).index() + ')').addClass('-to-active');
+              $(this).parent().find('.level:gt(' + $(this).index() + ')').addClass('-to-not-active');
+            }).mouseout(function() {
+              $(this).parent().find('.level').removeClass('-to-active');
+              $(this).parent().find('.level:gt(' + $(this).index() + ')').removeClass('-to-not-active');
+            }).click(function() {
+              $(this).removeClass('-to-active').addClass('-active');
+              $('.rating .level').removeClass("-activating");
+              $(this).addClass("-activating");
+              $(this).parent().find('.level:lt(' + $(this).index() + ')').removeClass('-to-not-active').addClass('-active');
+              $(this).parent().find('.level:gt(' + $(this).index() + ')').removeClass('-to-not-active').removeClass('-active');
+            });
+    
+  .bloc#atom-Tag    h5 Tag    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
           <div class="tag"><span>Html</span></div>
           <div class="tag"><span><i class="icon -sun"></i>Test</span></div>
           <div class="tag"><img src="assets/imgs/jpg/joe.jpg"/><span>Joe</span></div>
@@ -355,63 +416,6 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
               $(this).toggleClass("-line-primary");
             });
 
-  .bloc#atom-Rating    h5 Rating    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <div class="rating -activable -thumb-up">
-            <div class="level"></div>
-          </div>
-          <div class="rating -activable -thumb-down">
-            <div class="level"></div>
-          </div>
-          <div class="rating -activable -heart">
-            <div class="level touch -visible -active"></div>
-            <div class="level touch -visible -active"></div>
-            <div class="level touch -visible"></div>
-            <div class="level touch -visible"></div>
-            <div class="level touch -visible"></div>
-          </div>
-          <div class="rating -star -warning">
-            <div class="level -active"></div>
-            <div class="level -active"></div>
-            <div class="level -active"></div>
-            <div class="level"></div>
-            <div class="level"></div>
-          </div>
-
-          .wrapper.sample-code          header            h6.desc HTML            fieldset.copy              button.button.copy-button.-line-primary.-no-gradient.-no-border(data-clipboard-target="#Rating-code")                i.icon.-floppy-disk              .tag.-success.-pointing.-left.toggle-copy-success                span Copied          div(hljs).html#Rating-code.              &lt;div class=&quot;rating -activable -thumb-up&quot;&gt;
-                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
-              &lt;/div&gt;
-              &lt;div class=&quot;rating -activable -thumb-down&quot;&gt;
-                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
-              &lt;/div&gt;
-              &lt;div class=&quot;rating -activable -heart&quot;&gt;
-                &lt;div class=&quot;level touch -visible -active&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level touch -visible -active&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level touch -visible&quot;&gt;&lt;/div&gt;
-              &lt;/div&gt;
-              &lt;div class=&quot;rating -star -warning&quot;&gt;
-                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level -active&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
-                &lt;div class=&quot;level&quot;&gt;&lt;/div&gt;
-              &lt;/div&gt;
-
-           div(hljs).javascript.Rating-code.            $('.rating.-activable .level').hover(function() {
-              $(this).addClass('-to-active');
-              $(this).parent().find('.level:lt(' + $(this).index() + ')').addClass('-to-active');
-              $(this).parent().find('.level:gt(' + $(this).index() + ')').addClass('-to-not-active');
-            }).mouseout(function() {
-              $(this).parent().find('.level').removeClass('-to-active');
-              $(this).parent().find('.level:gt(' + $(this).index() + ')').removeClass('-to-not-active');
-            }).click(function() {
-              $(this).removeClass('-to-active').addClass('-active');
-              $('.rating .level').removeClass("-activating");
-              $(this).addClass("-activating");
-              $(this).parent().find('.level:lt(' + $(this).index() + ')').removeClass('-to-not-active').addClass('-active');
-              $(this).parent().find('.level:gt(' + $(this).index() + ')').removeClass('-to-not-active').removeClass('-active');
-            });
-    
   .bloc#atom-Toggle    h5 Toggle    hr    div      div.two-cols-verticaly-aligned        .wrapper.sample.          <label>Simple</label>
           <div class="toggle">
             <input id="toggle1" type="checkbox">
@@ -486,10 +490,6 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
       });
     }, 3000);
 
-    $(".toggle-active").click(function(){
-      $(this).toggleClass("-line-primary");
-    });
-
     $('.rating.-activable .level').hover(function() {
       $(this).addClass('-to-active');
       $(this).parent().find('.level:lt(' + $(this).index() + ')').addClass('-to-active');
@@ -505,6 +505,10 @@ header#atom-head  div    h3 atomsection.section#atom  .bloc#atom-Blockquote
       $(this).parent().find('.level:gt(' + $(this).index() + ')').removeClass('-to-not-active').removeClass('-active');
     });
     
+    $(".toggle-active").click(function(){
+      $(this).toggleClass("-line-primary");
+    });
+
     $(".toggle-video").click(function(){
       $(this).addClass("-activating");
       window.setTimeout(function(){
