--- a/src/css/atom/_checkbox.scss
+++ b/src/css/atom/_checkbox.scss
@@ -41,7 +41,10 @@
 	margin-bottom: $text-size / 2;
 	@extend .unselectable;
 	position: relative;
-
+	min-width: 50%;
+	&--large {
+		width: 92%;
+	}
 	&:before {
 		@include clearfix();
 	}
